labs/kube/04-deploying-on-service-mesh/hello2-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hello2-ns
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello2-v1
  namespace: hello2-ns
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello2
        version: v1
    spec:
      serviceAccountName: hello2-sa
      containers:
      - name: helloworld
        image: istio/examples-helloworld-v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello2-v2
  namespace: hello2-ns
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello2
        version: v2
    spec:
      serviceAccountName: hello2-sa
      containers:
      - name: helloworld
        image: istio/examples-helloworld-v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
