labs/kube/04-deploying-on-service-mesh/hello2-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello2-svc
  labels:
    app: hello2
  namespace: hello2-ns
spec:
  type: ClusterIP
  #type: NodePort
  ports:
  - name: http
    port: 6000
    targetPort: 5000
  selector:
    app: hello2
---
