labs/kube/04-deploying-on-service-mesh/gis-test1.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test1-ns
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test1-sidecar
  namespace: test1-ns
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gis-security-sidecar
    spec:
      serviceAccountName: test1-sa
      containers:
      - name: gis-security-sidecar
        image: locactus/gis-security-sidecar
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test1-api
  namespace: test1-ns
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gis-test-api
    spec:
      serviceAccountName: test1-sa
      containers:
      - name: gis-test-api
        image: locactus/gis-test-api
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: test1-sidecar-svc
  namespace: test1-ns
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 6000
    targetPort: 5000
  selector:
    app: test1-sidecar
---
apiVersion: v1
kind: Service
metadata:
  name: test1-api-svc
  namespace: test1-ns
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 6001
    targetPort: 5001
  selector:
    app: test1-api
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test1-sidecar-ing
  annotations:
    kubernetes.io/ingress.class: "istio"
  namespace: test1-ns
spec:
  rules:
  - http:
      paths:
      - path: /endpoint/payment-init/make-payment
        backend:
          serviceName: hello2-svc
          servicePort: 6000
---
