labs/kube/04-deploying-on-service-mesh/hello2-app-istio-0.5.0.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hello2-ns
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: hello2-v1
  namespace: hello2-ns
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"6abbe7c7c508e6dcbd844f45653076c0506b2bb092ac9354362b8dc696129258","initContainers":["istio-init","enable-core-dump"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"]}'
      creationTimestamp: null
      labels:
        app: hello2
        version: v1
    spec:
      containers:
      - image: istio/examples-helloworld-v1
        imagePullPolicy: IfNotPresent
        name: helloworld
        ports:
        - containerPort: 5000
        resources: {}
      - image: docker.io/istio/proxy:0.5.0
        args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - hello2
        - --drainDuration
        - 2s
        - --parentShutdownDuration
        - 3s
        - --discoveryAddress
        - istio-pilot.istio-system:15003
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 1s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - MUTUAL_TLS
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      serviceAccountName: hello2-sa
      volumes:
      - name: istio-envoy
        emptyDir:
          medium: Memory
        #name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.hello2-sa
status: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: hello2-v2
  namespace: hello2-ns
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"6abbe7c7c508e6dcbd844f45653076c0506b2bb092ac9354362b8dc696129258","initContainers":["istio-init","enable-core-dump"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"]}'
      creationTimestamp: null
      labels:
        app: hello2
        version: v2
    spec:
      containers:
      - image: istio/examples-helloworld-v2
        imagePullPolicy: IfNotPresent
        name: helloworld
        ports:
        - containerPort: 5000
        resources: {}
      - image: docker.io/istio/proxy:0.5.0
        args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - hello2
        - --drainDuration
        - 2s
        - --parentShutdownDuration
        - 3s
        - --discoveryAddress
        - istio-pilot.istio-system:15003
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 1s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - MUTUAL_TLS
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      serviceAccountName: hello2-sa
      volumes:
      - name: istio-envoy
        emptyDir:
          medium: Memory
        #name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.hello2-sa
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: hello2-svc
  labels:
    app: hello2
  namespace: hello2-ns
spec:
  type: ClusterIP
  #type: NodePort
  ports:
  - name: http
    port: 6000
    targetPort: 5000
  selector:
    app: hello2
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello2-ing
  annotations:
    kubernetes.io/ingress.class: "istio"
  namespace: hello2-ns
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: hello2-svc
          servicePort: 6000
---
