labs/kube/04-deploying-on-service-mesh/hello2-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello2-ing
  annotations:
    kubernetes.io/ingress.class: "istio"
  namespace: hello2-ns
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: hello2-svc
          servicePort: 6000
---
